# Demand_Signal_OS

./: .gitignore  Dockerfile  Dockerfile.api  pyproject.toml
docs/: BACKTESTING.md  CONSTITUTION.md  F2S_BOUNDARY.md
docs/contracts/: CONTRACTS.md
scripts/: doctor.py
src/demand_signal_os/: __init__.py  accuracy.py
src/demand_signal_os/api/: __init__.py  account_routes.py  actuals_routes.py  app.py  auth.py  forecast_export.py  forecast_routes.py  inventory_routes.py  leaderboard_routes.py  receipt_routes.py  simos_export.py
src/demand_signal_os/backtest/: __init__.py  benchmarks.py  harness.py  metrics.py  synthetic.py
src/demand_signal_os/builder/schemas/: __init__.py  demand_history.py  demand_history_multi.py
src/demand_signal_os/calibration/: __init__.py  calibrator.py
src/demand_signal_os/config/: __init__.py
src/demand_signal_os/config/archetypes/: discrete_manufacturing_distribution.yaml
src/demand_signal_os/consumers/: __init__.py  o2c_adapter.py  simos_adapter.py  simos_arrivals_adapter.py
src/demand_signal_os/estimation/: __init__.py  censoring.py  lead_time.py
src/demand_signal_os/forecasting/: __init__.py  band_guard.py  ets.py  fallback.py  gbm.py  protocol.py  registry.py  statistical.py
src/demand_signal_os/forecasting/intermittent/: __init__.py  stubs.py
src/demand_signal_os/forecasting/reconciliation/: __init__.py  bottom_up.py
src/demand_signal_os/inventory_policy/: __init__.py  base_stock.py  newsvendor.py  pir.py  qr.py  safety_stock.py  ss.py
src/demand_signal_os/leaderboard/: __init__.py  orchestrator.py  types.py
src/demand_signal_os/ops_schemas/: __init__.py  accuracy.py  demand.py  fallback.py  forecast.py  hierarchy.py  policy.py
tests/: test_accuracy.py
tests/api/: test_actuals_routes.py  test_forecast_export.py  test_forecast_routes.py  test_inventory_routes.py  test_leaderboard_routes.py  test_receipt_routes.py
tests/backtest/: test_benchmarks.py  test_harness.py  test_metrics.py  test_synthetic.py
tests/calibration/: test_calibrator.py
tests/consumers/: test_o2c_adapter.py  test_simos_arrivals_adapter.py
tests/forecasting/: test_band_guard.py  test_fallback.py  test_gbm.py  test_reconciliation.py  test_statistical.py
tests/integration/: test_forecast_to_policy.py
tests/inventory_policy/: test_safety_stock.py
tests/leaderboard/: test_determinism.py  test_orchestrator.py  test_registry.py
tests/ops_schemas/: test_schemas_roundtrip.py
web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  IdentityBadge.tsx  LeaderboardView.tsx  PremiumGate.tsx  VerifyPanel.tsx  VerifyView.tsx  main.tsx  sso.ts  verifyExample.json  vite-env.d.ts
