[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demand_signal_os"
version = "0.1.0"
description = "Probabilistic demand signal engine for the Planning2Cash internal playground"
authors = [{name = "Thang"}]
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    # Promoted shared boundary types (platforms_os/packages/ops_schemas).
    # Install order: `pip install -e platforms_os/packages/ops_schemas`
    # before `pip install -e Demand_Signal_OS`. Promoted 2026-06-08 per
    # CONSTITUTION §8.
    "ops_schemas",
    # Cross-engine SSO: shared mao_live_ tier resolver (platforms_os/packages/platform_auth).
    "platform_auth",
    # Pinned per CONSTITUTION §10 Nixtla wrap decision (Apache 2.0)
    "statsforecast==2.0.3",
    "hierarchicalforecast==1.5.1",
    "utilsforecast>=0.2.0,<1.0",
    "lightgbm>=4.0,<5.0",
    # Core
    "pydantic>=2.6,<3.0",
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<3.0",
    "scipy>=1.11,<2.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.4",
    "hypothesis>=6.100",
]
# Thin trust-gate API (src/demand_signal_os/api/). Deliberately separate from
# the base deps so the Docker image can install ONLY trust_gate + ops_schemas +
# excel_io + fastapi + uvicorn — never the heavy forecasting stack
# (scipy / statsforecast / lightgbm). See src/demand_signal_os/api/__init__.py.
api = [
    "fastapi",
    "uvicorn[standard]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"demand_signal_os" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

# Third-party libraries without type stubs we wrap (Nixtla, LightGBM, scipy).
# Stubs are out-of-scope for v0.1; revisit when the libraries publish their own.
[[tool.mypy.overrides]]
module = [
    "statsforecast.*",
    "hierarchicalforecast.*",
    "utilsforecast.*",
    "lightgbm.*",
    "scipy.*",
    # Local first-party boundaries we wrap without py.typed markers.
    "trust_gate.*",
    "excel_io.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

# Per-file ignores — canonical math notation cannot be lower-cased without
# diverging from textbook references (Silver-Pyke-Peterson, Zipkin, sklearn).
[tool.ruff.lint.per-file-ignores]
# Inventory policy variables — Q/R/S/s are textbook canonical (Silver-Pyke-Peterson
# §7; Zipkin ch. 9-10). Renaming to lowercase would lose the literature anchor.
"src/demand_signal_os/inventory_policy/*.py" = ["N803", "N806"]
# GBM uses sklearn-canonical X_train / X_pred matrices.
"src/demand_signal_os/forecasting/gbm.py" = ["N806"]
# WIS formula uses K = number of intervals (Bracher et al. 2021).
"src/demand_signal_os/backtest/metrics.py" = ["N806"]
# Integration tests exercise (Q, R) policy returns — keep textbook names.
"tests/integration/*.py" = ["N806"]
